main title z-index fix for mobile

--- a/src/app/components/Portada.module.css
+++ b/src/app/components/Portada.module.css
@@ -40,6 +40,7 @@
     .textContainer {
         grid-column: 1 / -1; 
         grid-row: 4 / -1; 
+        z-index: 1;
     }
     .subtitle h2{
         font-size: 1.5rem;
